2008-09-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Collections, MonoDevelop.Core.Collections/Set.cs,
	  MonoDevelop.Core.mdp, Makefile.am: Added Set collection.

2008-08-28  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.Core.Execution/ExternalConsoleLocator.cs: Fix xterm launch string.

2008-08-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Serialization/ClassDataType.cs: Add missing null
	  check.

2008-08-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Serialization/ClassDataType.cs: When deserializing
	  nested properties, make sure the nesting element is not added as
	  unknown element unless it actually contains unknown properties.
	  Fixes bug #403847.

2008-08-13  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core/XmlReadHelper.cs: Add stack trace to error message,
	  replace a 'goto', and fix bug that skipped nodes with same name as
	  start node.

2008-07-22  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Core.Execution/ProcessWrapper.cs,
	  MonoDevelop.Core.Execution/ProcessService.cs: Work around Mono bug
	  410743 - "wapi leak in System.Diagnostic.Process". Fixes "Bug
	  410740 - ProcessWrapper leaks wapi handles".

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Core.Serialization/DataContext.cs,
	  MonoDevelop.Core.Serialization/ISerializationAttributeProvider.cs,
	  MonoDevelop.Core.Serialization/XmlMapAttributeProvider.cs: Moved
	  serialization engine to MonoDevelop.Core. Use new syntax for
	  specifying attribute scope.

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDevelop.Core.Serialization,
	  MonoDevelop.Core.Serialization/DataType.cs,
	  MonoDevelop.Core.Serialization/ArrayHandler.cs,
	  MonoDevelop.Core.Serialization/DataContext.cs,
	  MonoDevelop.Core.Serialization/TypeAttributeProvider.cs,
	  MonoDevelop.Core.Serialization/IExtendedDataItem.cs,